cleaned up frotend code and fixing spacing

--- a/frontend/src/components/FakeNewsChecker/FakeNewsChecker.css
+++ b/frontend/src/components/FakeNewsChecker/FakeNewsChecker.css
@@ -219,7 +219,7 @@ body {
 
 /* Add a title to the page */
 .container:before {
-  content: "Fake News Detector";
+  content: "NewsTrustAi";
   display: block;
   font-size: 1.8rem;
   font-weight: 700;
